wordpress/manifest/dp-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: multilayer-app
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      seLinuxOptions:
        level: 's0:c27,c4'
      supplementalGroups:
        - 1000710001
      fsGroup: 0
      containers:
      - image: bitnami/wordpress:6
        name: wordpress
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 2
            memory: 2048Mi
          requests:
            cpu: 1
            memory: 1024Mi
        ports:
        - containerPort: 8080
          name: wordpress
