wordpress/manifest/svc-wordpress.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
  namespace: gitops-app
  labels:
    app: wordpress
    app.kubernetes.io/component: wordpress
    app.kubernetes.io/instance: wordpress
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  selector:
    deployment: wordpress
