wordpress/manifest/ing-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ing
  namespace: gitops-app
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress-dev.apps.bbassetnonprod.brazilsouth.aroapp.io
    http:
      paths:
      - backend:
          service:
            name: wordpress-svc-clusterip
            port:
              number: 80
        path: /
        pathType: Prefix
