wordpress/manifest/rt-wordpress.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rt-wordpress
  namespace: gitops-app
  labels:
    app: wordpress
    app.kubernetes.io/component: wordpress
    app.kubernetes.io/instance: wordpress
spec:
  host: wordpress-dev.apps.bbassetnonprod.brazilsouth.aroapp.io
  to:
    kind: Service
    name: wordpress-svc-clusterip
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
